--- a/templates/base.html
+++ b/templates/base.html
@@ -8,10 +8,21 @@
             <title>Welcome to microblog </title>
         {% endif %}
  </head>
-<body>
+    <body>
         <div> Microblog <a href="/index">Home</a></div>
         <hr>
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                <ul>
+                    {% for message in messages %}
+                        <li>
+                            {{ message }}
+                        </li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
+        {% endwith %}
         {% block content %} {% endblock %}
 
-</body>
+    </body>
 </html>
